--- a/SCL/SCL.vcxproj.filters
+++ b/SCL/SCL.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="SCLQuaternion.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="SCLSubMesh.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SCLPrerequisites.cpp">
@@ -165,6 +168,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="SCLQuaternion.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="SCLSubMesh.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
