--- a/SCL/SCL.vcxproj.filters
+++ b/SCL/SCL.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="SCLSubMesh.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="SCLNetworkManager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SCLPrerequisites.cpp">
@@ -171,6 +174,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="SCLSubMesh.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="SCLNetworkManager.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
