--- a/SCL/SCL.vcxproj.filters
+++ b/SCL/SCL.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="SCLNetworkManager.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="SCLHttpRequest.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SCLPrerequisites.cpp">
@@ -177,6 +180,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="SCLNetworkManager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="SCLHttpRequest.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
