添加HTTP响应类，并监听HTTP响应过程！

--- a/SCL/SCL.vcxproj
+++ b/SCL/SCL.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="SCLColorValue.h" />
     <ClInclude Include="SCLEntity.h" />
     <ClInclude Include="SCLHttpRequest.h" />
+    <ClInclude Include="SCLHttpResponse.h" />
     <ClInclude Include="SCLImage.h" />
     <ClInclude Include="SCLInteriorHeader.h" />
     <ClInclude Include="SCLMesh.h" />
@@ -195,6 +196,7 @@
     <ClCompile Include="SCLColorValue.cpp" />
     <ClCompile Include="SCLEntity.cpp" />
     <ClCompile Include="SCLHttpRequest.cpp" />
+    <ClCompile Include="SCLHttpResponse.cpp" />
     <ClCompile Include="SCLImage.cpp" />
     <ClCompile Include="SCLMesh.cpp" />
     <ClCompile Include="SCLMatrix.cpp" />
